# n2md

./: .gitignore  README.md  setup.cfg
docs/: EXTENSIONS.md
src/n2md/: __init__.py  cli.py  converter.py  main.py
src/n2md/converters/: _common.py  json.py  markdown.py
tests/: conftest.py  test_converter.py  test_e2e.py  test_json_converter.py  test_markdown_converter.py
tests/data/: markdown.md  notion.md
tests/data/json/: expected.md  original.json
tests/data/markdown/: expected.md
