[metadata]
name = n2md
version = attr: n2md.__version__
author = Kale Miller
author_email = kale.miller@prometheusai.com.au
long_description = file: README.md

[options]
include_package_data = True
packages = find:
package_dir =
    =src/
install_requires = file: requirements.txt

[options.extras_require]
dev = file: dev-requirements.txt

[options.entry_points]
console_scripts =
    n2md = n2md.main:cli

[options.packages.find]
where = src/